# shoppe-affiliate

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 001_users.py  002_products.py  003_affiliate_links.py  004_products_add_url.py
app/: __init__.py  main.py
app/commands/: __init__.py  create_admin.py
app/constants/: __init__.py  tags.py
app/controllers/: affiliate_catalog_controller.py  auth_controller.py  health_controller.py  telegram_webhook_controller.py
app/core/: config.py  exception_handlers.py  exceptions.py  logging.py  pagination.py  security.py
app/db/: session.py
app/middlewares/: __init__.py  auth.py
app/models/: __init__.py  affiliate_link.py  product.py  user.py
app/repositories/: health_repository.py  product_repository.py  user_repository.py
app/routes/: __init__.py  affiliate_catalog.py  api_v1.py  auth.py  health.py  telegram_webhook.py
app/schemas/: affiliate_catalog.py  auth.py  base.py  health.py  telegram.py  urls.py
app/scripts/: __init__.py
app/services/: affiliate_catalog_service.py  auth_service.py  excel_import_service.py  (+5 more)
docker/: entrypoint.sh  healthcheck.py
tests/: test_affiliate_catalog_api.py  test_affiliate_catalog_service.py  test_affiliate_providers.py  test_health.py  test_logging.py  test_models.py  test_product_metadata_service.py  test_security.py  test_telegram_catalog_bot.py  test_telegram_webhook_api.py  test_urls.py
(+28 files in other folders)
